(#2931) Work ongoing.
Needed a commit for the config file changes